--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,8 @@ free-proxy = "^1.1.1"
 pathlib = "^1.0.1"
 rich = "^13.7.0"
 pyserde = "^0.12.5"
-polars = "^0.19.16"
-beautifulsoup4 = "^4.12.2"
+polars = "^0.20.2"
+beautifulsoup4 = "^4.12.2"  
 scikit-learn = "^1.3.2"
 numpy = "^1.26.2"
 pandas = "^2.1.3"
@@ -24,6 +24,7 @@ duckdb = "^0.9.2"
 streamlit = "^1.28.2"
 plotly = "^5.18.0"
 statsmodels = "^0.14.0"
+poetry = "^1.7.1"
 
 
 [tool.poetry.group.dev.dependencies]
